[package]
name = "highlight-stderr"
version = "0.2.1"
authors = ["Josh Triplett <josh@joshtriplett.org>"]
description = "Run a command and highlight its stderr, preserving the order of stdout and stderr"
keywords = ["log", "pipe", "stdout", "stderr"]
categories = ["command-line-utilities"]
repository = "https://github.com/joshtriplett/highlight-stderr"
edition = "2018"
license = "MIT OR Apache-2.0"

[dependencies]
anstyle-git = "1"
anyhow = "1.0.72"
io-mux = "2.1.0"
